--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
           <li class="nav-item">
-            <a href="Resume.pdf" target="_blank" class="nav-link js-scroll-trigger">DOWNLOAD RESUME</a>
+            <a href="https://github.com/OryGregS/OryGregS.github.io/raw/master/Gregory-Smith-Resume.pdf" target="_blank" class="nav-link js-scroll-trigger">DOWNLOAD RESUME</a>
           </li>
         </ul>
       </div>
@@ -76,7 +76,7 @@
             <a href="mailto:ory.g95@gmail.com">ory.g95@gmail.com</a>
           </div>
           <p class="mb-5">I am a student at Western Michigan University studying Data Science with a minor in Computer Science. </p>
-          <a href="../resume.pdf" class="resumeLink">DOWNLOAD RESUME</a>
+          <a href="https://github.com/OryGregS/OryGregS.github.io/raw/master/Gregory-Smith-Resume.pdf" class="resumeLink">DOWNLOAD RESUME</a>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/greg.smith.104855">
