--- a/index.html
+++ b/index.html
@@ -53,13 +53,38 @@
             <a class="nav-link js-scroll-trigger" href="#coursework">Coursework</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+            <a class="nav-link js-scroll-trigger" href="#sai">Skills &amp; Interests</a>
           </li>
           <li class="nav-item">
             <a href="https://github.com/OryGregS/OryGregS.github.io/raw/master/Gregory-Smith-Resume.pdf" target="_blank" class="nav-link js-scroll-trigger">DOWNLOAD RESUME</a>
+          </li>
+          <li class="nav-item">
+            <ul class="list-inline list-social-icons mb-0">
+              <li class="list-inline-item">
+                <a href="https://www.facebook.com/greg.smith.104855">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/orygregs/">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/OryGregS">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
@@ -72,37 +97,21 @@
           <h1 class="mb-0">Gregory
             <span class="text-primary">Smith</span>
           </h1>
+          <h3 class="subtitle">Aspiring Data Analyst / Scientist</h3>
           <div class="subheading mb-5">Kalamazoo, MI 49006 · (616) 610-9577 ·
             <a href="mailto:ory.g95@gmail.com">ory.g95@gmail.com</a>
           </div>
-          <p class="mb-5">I am a student at Western Michigan University studying Data Science with a minor in Computer Science. </p>
+          <p class="mb-5" id='description'>Hi! I'm Gregory Smith, a student at Western Michigan University studying Data Science with a minor in Computer Science.
+             I started off at Western as a Computer Science major with no programming knowledge or experience. </br></br>
+             Once I started coding, I was hooked. I'm an innate problem-solver, and I like to be given a challenge. So, there's no surprise that Computer Science and I were a good fit.
+            While learning to code, I quickly realized that I preferred playing with data, whether I'm cleaning it, manipulating it, visualizing it, or drawing insights from it.
+            Around my 2nd semester at Western, I realized that Western offered a Data Science degree.
+            Imagine that: a major that is specialized for tackling complex problems and playing with data.
+            I switched my major to Data Science, joined the Data Science &amp; Statistics Club here at Western, and haven't looked back since. 
+          </br></br>
+            I believe that there's a story waiting to be read in every dataset, and I want to be the storyteller. My story has just started, and I'm excited to see where it goes.
+          </p>
           <a href="https://github.com/OryGregS/OryGregS.github.io/raw/master/Gregory-Smith-Resume.pdf" class="resumeLink">DOWNLOAD RESUME</a>
-          <ul class="list-inline list-social-icons mb-0">
-            <li class="list-inline-item">
-              <a href="https://www.facebook.com/greg.smith.104855">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/orygregs/">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://github.com/OryGregS">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
         </div>
       </section>
 
@@ -117,7 +126,7 @@
               <p>Worked as a team to deliver outstanding service in a professional and timely manner. Experience with fast-paced events and communicating with various types of people.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2017 - Present</span>
+              <span class="text-secondary">September 2017 - Present</span>
             </div>
           </div>
 
@@ -128,7 +137,7 @@
               <p>Worked as a team to quickly and carefully move furniture for customers. Provided excellent customer service while also hustling to beat the estimated time.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">June 2017 - September 2017</span>
+              <span class="text-secondary">June 2017 - September 2017</span>
             </div>
           </div>
 
@@ -139,7 +148,7 @@
               <p>Worked alongside other bartenders as a team to seamlessly work the bar for the Grand Opening. Emphasis on creating a fun, lively, and engaging experience that turns customers into returning guests.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Feburary 2016 - August 2016</span>
+              <span class="text-secondary">Feburary 2016 - August 2016</span>
             </div>
           </div>
 
@@ -150,7 +159,7 @@
               <p>Provided bartenders with the tools to be able to focus solely on making drinks and creating a fun, lively, and seamless customer experience. Duties included: collecting and washing glassware, changing kegs, and assisting the bartender with anything they need.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2015 - Feb 2016</span>
+              <span class="text-secondary">December 2015 - Feb 2016</span>
             </div>
           </div>
 
@@ -170,7 +179,7 @@
               <p>GPA: 3.41</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2016 - Present</span>
+              <span class="text-secondary">September 2016 - Present</span>
             </div>
           </div>
 
@@ -181,9 +190,19 @@
               <p></p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2013 - May 2016</span>
+              <span class="text-secondary">September 2013 - May 2016</span>
             </div>
           </div>
+          <div class="resume-item d-flex flex-column flex-md-row hs">
+              <div class="resume-content mr-auto">
+                <h3 class="mb-0">Zeeland East High School</h3>
+                <div class="subheading mb-3">High School Diploma</div>
+                <p></p>
+              </div>
+              <div class="resume-date text-md-right ">
+                <span class="text-secondary">September 2009 - May 2013</span>
+              </div>
+            </div>
 
         </div>
       </section>
@@ -191,41 +210,86 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="coursework">
         <div class="my-auto">
           <h2 class="mb-5">Coursework</h2>
+          <div class="subheading mb-3">Computer Science</div>
           <ul class="fa-ul mb-0">
-            <!--<li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
+              <i class="fa-li fa fa-check"></i>
+              Computer Science I &amp; II</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+              <i class="fa-li fa fa-check"></i>
+              Data &amp; File Structures</li>
             <li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
+              <i class="fa-li fa fa-check"></i>
+              Web Technologies</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li> -->
+            <li>
+              <i class="fa-li fa fa-adjust"></i>
+              Python Programming</li>
+            <li>
+              <i class="fa-li fa fa-adjust"></i>
+              R Programming for Data Science</li>
+            <li>
+            <li>
+              <i class="fa-li fa fa-circle"></i>
+              Big Data
+            </li>
+            <li>
+              <i class="fa-li fa fa-circle"></i>
+              Machine Learning
+            </li>
+            <li>
+              <i class="fa-li fa fa-circle"></i>
+              Artificial Neural Networks
+            </li>
+            <li>
+              <i class="fa-li fa fa-circle"></i>
+              Database Systems
+            </li>
+            <li>
+              <i class="fa-li fa fa-circle"></i>
+              Senior Design Project I
+            </li>
+            <li>
+              <i class="fa-li fa fa-circle"></i>
+              Senior Design Project II
+            </li>
+          </ul>
+
+        <div class="subheading mb-3 Stat-Head">Statistics</div>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Data Analysis Using R</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Introduction to Statistical Computing (SAS)</li>
+            <li>
+              <i class="fa-li fa fa-adjust"></i>
+              Regression Analysis</li>
+            <li>
+              <i class="fa-li fa fa-circle"></i>
+              Applied Data Mining</li>
+            <li>
+              <i class="fa-li fa fa-circle"></i>
+              Computer Based Data Analysis</li>
+            <li>
+              <i class="fa-li fa fa-circle"></i>
+              Time Series Analysis</li>
+          </ul>
+        </div>
+        <div class="legend">
+          <ul class="fa-ul mb-0 ">
+            <li><i class="fa-li fa fa-check"></i> - Completed</li>
+            <li><i class="fa-li fa fa-adjust"></i> - In Progress</li>
+            <li><i class="fa-li fa fa-circle"></i> - Not yet taken</li>
           </ul>
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="sai">
         <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
+          <h2 class="mb-5">Skills &amp; Interests</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
             <ul class="fa-ul mb-0">
@@ -257,33 +321,19 @@
                   <i class="fa-li fa fa-check"></i>
                   Microsoft Office</li>
             </ul>
-
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
-          </ul>
+            <div class="my-auto" id="interests">
+              <p class="subheading mb-3">Interests</p>        
+                <p class="mb-0">Apart from Data Science, I have taken in interest in web-design. It's like a good balance of my left and right brain. 
+                  I like to create something aesthetically pleasing, while also being functional. </br></br>
+                  I haven't curbed my childhood addiction to video games yet, and I spend time playing mostly Fortnite, Rocket League, &amp; Overwatch.
+                  I play these games not only because they are fun, but they're competitive and facilitate a mental and physical challenge. </br></br>
+                  Aside from my computer, my main hobby would be playing the guitar. I started off playing the electric guitar when I was 12, and switched to acoustic about 4 years later. 
+                  My biggest influences are <a href="https://en.wikipedia.org/wiki/Andy_McKee" target="_blank">Andy Mckee</a> and <a href="https://en.wikipedia.org/wiki/Sungha_Jung" target="_blank">Sungha Jung</a>.
+                  I mostly play fingerstyle but I can also sing. I don't write any music of my own, but I take great joy in covering songs.
+                  
+              </div>
         </div>
       </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>When I first started studying computer science, I've always been fascinated with the concept of "machine learning"....</p>
-          <p class="mb-0">Apart from studying and my side-projects, I enjoy a number of hobbies. I haven't curbed my childhood addiction to video games yet, and I spend time playing mostly Fortnite &amp; Overwatch. When I'm not on my computer, you'll generally find me with my guitar in hand, either camping outside or inside learning new songs. </p>
-        </div>
-      </section>
-
     </div>
 
     <!-- Bootstrap core JavaScript -->
