--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Personal website for Gregory R Smith">
+    <meta name="author" content="Gregory Smith, Greg Smith, Greg R Smith, Gregory R Smith">
+    <meta name="keywords" content="Greg, Smith, Gregory, Gregory R Smith, Data, Data Science, Data Scientist, Data Analyst, Analyst, Programmer, Programming,
+     Western Michigan University, WMU, Data Science and Statistics Club, Coding, Kalamazoo, Grand Rapids Community College, 
+     GRCC, Big Data, Machine Learning, Data Mining, Statistics, R, Python, Github, Bootstrap, Git, Zeeland, Zeeland East, Zeeland East High School, Holland, Computer Science, Student, Senior">
 
     <title>Gregory Smith</title>
 
