--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <li class="nav-item">
             <ul class="list-inline list-social-icons mb-0">
               <li class="list-inline-item">
-                <a href="https://www.facebook.com/greg.smith.104855">
+                <a href="https://www.facebook.com/orygregs">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
