--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       gtag('js', new Date());
 
       gtag('config', 'UA-113728513-1');
-</script>
-
+    </script>
+  <link rel="icon" href="/favicon.ico">
   </head>
 
   <body id="page-top">
