--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       gtag('config', 'UA-113728513-1');
     </script>
-  <link rel="icon" href="/favicon.ico">
+  <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
   </head>
 
   <body id="page-top">
