--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a class="nav-link js-scroll-trigger" href="#sai">Skills &amp; Interests</a>
           </li>
           <li class="nav-item">
-            <a href="https://github.com/OryGregS/OryGregS.github.io/raw/master/Gregory-Smith-Resume.pdf" target="_blank" class="nav-link js-scroll-trigger">DOWNLOAD RESUME</a>
+            <a href="https://github.com/OryGregS/OryGregS.github.io/raw/master/GsmithResume.pdf" target="_blank" class="nav-link js-scroll-trigger">DOWNLOAD RESUME</a>
           </li>
           <li class="nav-item">
             <ul class="list-inline list-social-icons mb-0">
@@ -124,7 +124,7 @@
           </br></br>
             I believe that there's a story waiting to be read in every dataset, and I want to be the storyteller. My story has just started, and I'm excited to see where it goes.
           </p>
-          <a href="https://github.com/OryGregS/OryGregS.github.io/raw/master/Gregory-Smith-Resume.pdf" class="resumeLink">DOWNLOAD RESUME</a>
+          <a href="https://github.com/OryGregS/OryGregS.github.io/raw/master/GsmithResume.pdf" class="resumeLink">DOWNLOAD RESUME</a>
         </div>
       </section>
 
@@ -137,7 +137,7 @@
               <h3 class="mb-0">Western Michigan University</h3>
               <div class="subheading mb-3">*In Progress*</br> Major in Data Science &amp; Minor in Computer Science</div>
               
-              <p>GPA: 3.41</p>
+              <p>GPA: 3.53</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-secondary">September 2016 - Present</span>
@@ -185,31 +185,31 @@
               Web Technologies</li>
             <li>
             <li>
-              <i class="fa-li fa fa-adjust"></i>
+              <i class="fa-li fa fa-check"></i>
               Python Programming</li>
             <li>
-              <i class="fa-li fa fa-adjust"></i>
+              <i class="fa-li fa fa-check"></i>
               R Programming for Data Science</li>
             <li>
             <li>
-              <i class="fa-li fa fa-circle"></i>
+              <i class="fa-li fa fa-check"></i>
+              Artificial Neural Networks
+            </li>
+            <li>
+              <i class="fa-li fa fa-adjust"></i>
               Big Data
+            </li>
+            <li>
+              <i class="fa-li fa fa-adjust"></i>
+              Parallel Computations
+            </li>
+            <li>
+              <i class="fa-li fa fa-adjust"></i>
+              Senior Design Project I
             </li>
             <li>
               <i class="fa-li fa fa-circle"></i>
               Machine Learning
-            </li>
-            <li>
-              <i class="fa-li fa fa-circle"></i>
-              Artificial Neural Networks
-            </li>
-            <li>
-              <i class="fa-li fa fa-circle"></i>
-              Database Systems
-            </li>
-            <li>
-              <i class="fa-li fa fa-circle"></i>
-              Senior Design Project I
             </li>
             <li>
               <i class="fa-li fa fa-circle"></i>
@@ -226,17 +226,17 @@
               <i class="fa-li fa fa-check"></i>
               Introduction to Statistical Computing (SAS)</li>
             <li>
-              <i class="fa-li fa fa-adjust"></i>
+              <i class="fa-li fa fa-check"></i>
               Regression Analysis</li>
             <li>
-              <i class="fa-li fa fa-circle"></i>
+              <i class="fa-li fa fa-adjust"></i>
               Applied Data Mining</li>
             <li>
               <i class="fa-li fa fa-circle"></i>
               Computer Based Data Analysis</li>
             <li>
               <i class="fa-li fa fa-circle"></i>
-              Time Series Analysis</li>
+              Nonparametric Statistical Methods</li>
           </ul>
         </div>
         <div class="legend">
@@ -251,14 +251,38 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+              <div class="resume-content mr-auto">
+                <h3 class="mb-0">IT Student Services</h3>
+                <div class="subheading mb-3">WMU - Waldo Library</div>
+                <p>Leverage my knowledge of computers and networks to provide a positive computing experience for the students, faculty, and staff at Waldo Library</p>
+              </div>
+              <div class="resume-date text-md-right">
+                <span class="text-secondary">Aug 2018 - Current</span>
+              </div>
+            </div>
+  
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+              <div class="resume-content mr-auto">
+                <h3 class="mb-0">Electronics Sales Team Member</h3>
+                <div class="subheading mb-3">Target</div>
+                <p>Utilize my breadth and depth of knowledge in current technology to recommend products to guests based on their needs</p>
+              </div>
+              <div class="resume-date text-md-right">
+                <span class="text-secondary">May 2018 - Current</span>
+              </div>
+            </div>
+          </div>
+
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Bartender</h3>
               <div class="subheading mb-3">Lynx Golf Course</div>
-              <p>Worked as a team to deliver outstanding service in a professional and timely manner. Experience with fast-paced events and communicating with various types of people.</p>
+              <p>Worked as a team to deliver outstanding service in a professional and timely manner. Experience with fast-paced events and communicating with various types of people</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-secondary">September 2017 - Present</span>
+              <span class="text-secondary">Sep 2017 - April 2018</span>
             </div>
           </div>
 
@@ -269,32 +293,9 @@
               <p>Worked as a team to quickly and carefully move furniture for customers. Provided excellent customer service while also hustling to beat the estimated time.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-secondary">June 2017 - September 2017</span>
+              <span class="text-secondary">June 2017 - Sep 2017</span>
             </div>
           </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Bartender</h3>
-              <div class="subheading mb-3">On The Border</div>
-              <p>Worked alongside other bartenders as a team to seamlessly work the bar for the Grand Opening. Emphasis on creating a fun, lively, and engaging experience that turns customers into returning guests.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-secondary">Feburary 2016 - August 2016</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Barback</h3>
-              <div class="subheading mb-3">CityFlatsHotel</div>
-              <p>Provided bartenders with the tools to be able to focus solely on making drinks and creating a fun, lively, and seamless customer experience. Duties included: collecting and washing glassware, changing kegs, and assisting the bartender with anything they need.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-secondary">December 2015 - Feb 2016</span>
-            </div>
-          </div>
-        </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="sai">
@@ -311,6 +312,13 @@
                   <li>
                     <i class="fa-li fa fa-check"></i>
                     SAS</li>
+                  <li>
+                    <i class="fa-li fa fa-check"></i>
+                    PyTorch</li>
+                  <li>
+                  <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Keras</li>
                   <li>
                     <i class="fa-li fa fa-check"></i>
                     Java</li>
