--- a/index.html
+++ b/index.html
@@ -74,14 +74,6 @@
           <li class="nav-item">
             <ul class="list-inline list-social-icons mb-0">
               <li class="list-inline-item">
-                <a href="https://www.facebook.com/orygregs">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-              <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/orygregs/">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
@@ -137,7 +129,7 @@
               <h3 class="mb-0">Western Michigan University</h3>
               <div class="subheading mb-3">*In Progress*</br> Major in Data Science &amp; Minor in Computer Science</div>
               
-              <p>GPA: 3.53</p>
+              <p>GPA: 3.55</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-secondary">September 2016 - Present</span>
@@ -196,23 +188,23 @@
               Artificial Neural Networks
             </li>
             <li>
-              <i class="fa-li fa fa-adjust"></i>
-              Big Data
+              <i class="fa-li fa fa-check"></i>
+              Big Data Storage &amp; Retrieval
             </li>
             <li>
-              <i class="fa-li fa fa-adjust"></i>
+              <i class="fa-li fa fa-check"></i>
               Parallel Computations
             </li>
             <li>
-              <i class="fa-li fa fa-adjust"></i>
+              <i class="fa-li fa fa-check"></i>
               Senior Design Project I
             </li>
             <li>
-              <i class="fa-li fa fa-circle"></i>
+              <i class="fa-li fa fa-adjust"></i>
               Machine Learning
             </li>
             <li>
-              <i class="fa-li fa fa-circle"></i>
+              <i class="fa-li fa fa-adjust"></i>
               Senior Design Project II
             </li>
           </ul>
@@ -229,14 +221,14 @@
               <i class="fa-li fa fa-check"></i>
               Regression Analysis</li>
             <li>
-              <i class="fa-li fa fa-adjust"></i>
+              <i class="fa-li fa fa-check"></i>
               Applied Data Mining</li>
             <li>
-              <i class="fa-li fa fa-circle"></i>
-              Computer Based Data Analysis</li>
+              <i class="fa-li fa fa-adjust"></i>
+              Big Data Analysis</li>
             <li>
-              <i class="fa-li fa fa-circle"></i>
-              Nonparametric Statistical Methods</li>
+              <i class="fa-li fa fa-adjust"></i>
+              Computer Based Data Analysis</li>
           </ul>
         </div>
         <div class="legend">
