--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+title: Gregory Smith's Website
+---
 <!DOCTYPE html>
 <html lang="en">
 
@@ -36,6 +39,7 @@
       gtag('config', 'UA-113728513-1');
     </script>
   <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  {% seo %}
   </head>
 
   <body id="page-top">
