--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Gregory Smith's Website
+title: Gregory Smith
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -10,9 +10,10 @@ title: Gregory Smith's Website
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Personal website for Gregory R Smith">
     <meta name="author" content="Gregory Smith, Greg Smith, Greg R Smith, Gregory R Smith">
-    <meta name="keywords" content="Greg, Smith, Gregory, Gregory R Smith, Data, Data Science, Data Scientist, Data Analyst, Analyst, Programmer, Programming,
-     Western Michigan University, WMU, Data Science and Statistics Club, Coding, Kalamazoo, Grand Rapids Community College, 
-     GRCC, Big Data, Machine Learning, Data Mining, Statistics, R, Python, Github, Bootstrap, Git, Zeeland, Zeeland East, Zeeland East High School, Holland, Computer Science, Student, Senior">
+    <meta name="keywords" content="Greg, Smith, Gregory, Gregory R Smith, Gregory Randall Smith, Data, Data Science, Data Scientist, Data Analyst, Analyst, Programmer, Programming,
+     Western Michigan University, WMU, Data Science and Statistics Club, Coding, Kalamazoo, Grand Rapids Community College, Software Developer, Software Engineer, Data Engineer, Big Data Engineer
+     GRCC, Big Data, Machine Learning, Data Mining, Statistics, R, Python, Github, Bootstrap, Git, Zeeland, Zeeland East, Zeeland East High School, Holland, Computer Science, Student, Senior, 
+     Parallel, Distributed, Parallel Computations, Distributed Systems, Hadoop, ">
 
     <title>Gregory Smith</title>
 
@@ -106,21 +107,19 @@ title: Gregory Smith's Website
           <h1 class="mb-0">Gregory
             <span class="text-primary">Smith</span>
           </h1>
-          <h3 class="subtitle mr">Aspiring Data Analyst / Scientist</h3>
+          <h3 class="subtitle mr">Aspiring Software Engineer</h3>
           <div class="subheading mb-5 mr">Kalamazoo, MI 49006 · (616) 610-9577 ·
             <a href="mailto:ory.g95@gmail.com">ory.g95@gmail.com</a>
           </div>
-          <p class="mb-5 mr" id='description'>Hi! I'm Gregory Smith, a student at Western Michigan University studying Data Science with a minor in Computer Science.
-             I started off at Western as a Computer Science major with no programming knowledge or experience. </br></br>
-             Once I started coding, I was hooked. I'm an innate problem-solver, and I like to be given a challenge. So, there's no surprise that Computer Science and I were a good fit.
-            While learning to code, I quickly realized that I preferred playing with data, whether I'm cleaning it, manipulating it, visualizing it, or drawing insights from it.
-            Around my 2nd semester at Western, I realized that Western offered a Data Science degree.
-            Imagine that: a major that is specialized for tackling complex problems and playing with data.
-            I switched my major to Data Science, joined the Data Science &amp; Statistics Club here at Western, and haven't looked back since. 
-          </br></br>
-            I believe that there's a story waiting to be read in every dataset, and I want to be the storyteller. My story has just started, and I'm excited to see where it goes.
+          <p class="mb-5 mr" id='description' style="font-size: 1.15rem;"><b>I like to solve problems.</b></p>
+          <p class="mb-5 mr" id='description'>Throughout my college career, I have been driven by my intellectual 
+            curiosity to find optimal solutions to the most pressing questions.
+            Whether it's debugging a program or solving a problem I've 
+            never seen before, I don't quit until I have it solved. If you ask me, there's no better feeling than solving a problem simply and elegantly.
           </p>
-          <a href="https://github.com/OryGregS/OryGregS.github.io/raw/master/GsmithResume.pdf" class="resumeLink">DOWNLOAD RESUME</a>
+          <p class="mb-5 mr" id='description' style="font-size: 1.35rem;">
+            <strong>Let's work on something great together.</strong>
+          </p>
         </div>
       </section>
 
