--- a/index.html
+++ b/index.html
@@ -104,20 +104,20 @@ title: Gregory Smith
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Gregory
-            <span class="text-primary">Smith</span>
+          <h1 class="mb-0" style="text-align: center;">Gregory
+            <span class="text-primary" style="text-align: center;">Smith</span>
           </h1>
-          <h3 class="subtitle mr">Aspiring Software Engineer</h3>
-          <div class="subheading mb-5 mr">Kalamazoo, MI 49006 · (616) 610-9577 ·
-            <a href="mailto:ory.g95@gmail.com">ory.g95@gmail.com</a>
+          <h3 class="subtitle mr" style="text-align: center;">Aspiring Software Engineer</h3>
+          <div class="subheading mb-5 mr" style="text-align: center;">Kalamazoo, MI 49006 · (616) 610-9577 ·
+            <a href="mailto:ory.g95@gmail.com" style="text-align: center;">ory.g95@gmail.com</a>
           </div>
-          <p class="mb-5 mr" id='description' style="font-size: 1.15rem;"><b>I like to solve problems.</b></p>
-          <p class="mb-5 mr" id='description'>Throughout my college career, I have been driven by my intellectual 
+          <p class="mb-5 mr" id='description' style="font-size: 1.15rem; text-align: center;"><b>I like to solve problems.</b></p>
+          <p class="mb-5 mr" id='description' style="text-align: center;">Throughout my college career, I have been driven by my intellectual 
             curiosity to find optimal solutions to the most pressing questions.
             Whether it's debugging a program or solving a problem I've 
             never seen before, I don't quit until I have it solved. If you ask me, there's no better feeling than solving a problem simply and elegantly.
           </p>
-          <p class="mb-5 mr" id='description' style="font-size: 1.35rem;">
+          <p class="mb-5 mr" id='description' style="font-size: 1.35rem; text-align: center;">
             <strong>Let's work on something great together.</strong>
           </p>
         </div>
