Change PDF viewer
Used docs.google.com to view PDF instead of Github

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ title: Gregory Smith
             <a class="nav-link js-scroll-trigger" href="#sai">Skills &amp; Interests</a>
           </li>
           <li class="nav-item">
-            <a href="https://github.com/OryGregS/OryGregS.github.io/blob/master/GsmithResume.pdf" target="_blank" class="nav-link js-scroll-trigger">VIEW RESUME</a>
+            <a href="https://docs.google.com/viewer?url=https://github.com/OryGregS/OryGregS.github.io/raw/master/GsmithResume.pdf" target="_blank" class="nav-link js-scroll-trigger">VIEW RESUME</a>
           </li>
           <li class="nav-item">
             <ul class="list-inline list-social-icons mb-0">
