--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ title: Gregory Smith
           <h1 class="mb-0" style="text-align: center;">Gregory
             <span class="text-primary" style="text-align: center;">Smith</span>
           </h1>
-          <h3 class="subtitle mr" style="text-align: center;">Aspiring Software Engineer</h3>
+          <h3 class="subtitle mr" style="text-align: center;">Associate Data Engineer</h3>
           <div class="subheading mb-5 mr" style="text-align: center;">Kalamazoo, MI 49006 · (616) 610-9577 ·
             <a href="mailto:ory.g95@gmail.com" style="text-align: center;">ory.g95@gmail.com</a>
           </div>
